--- a/.github/workflows/track-deployments.yml
+++ b/.github/workflows/track-deployments.yml
@@ -149,59 +149,13 @@ jobs:
               f.write(html_content)
           PYTHON_EOF
       
-      - name: Add CSS for deployment cards
+      - name: Verify deployment cards CSS
         run: |
           python3 << 'PYTHON_EOF'
-          import re
-          
           with open('index.html', 'r') as f:
-              html_content = f.read()
-          
-          # CSS to add
-          css_code = '''
-        .deployment-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 20px;
-        }
-        
-        .deployment-card {
-            background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%);
-            border: 2px solid #667eea;
-            border-radius: 8px;
-            padding: 20px;
-            transition: all 0.3s ease;
-        }
-        
-        .deployment-card:hover {
-            background: linear-gradient(135deg, #e9ecef 0%, #dee2e6 100%);
-            box-shadow: 0 6px 16px rgba(102, 126, 234, 0.2);
-            transform: translateY(-4px);
-        }
-        
-        .deployment-card h3 {
-            color: #667eea;
-            margin-bottom: 15px;
-            font-size: 1.2em;
-        }
-        
-        .deployment-card p {
-            margin: 8px 0;
-            color: #555;
-            font-size: 0.95em;
-        }
-        
-        .deployment-card strong {
-            color: #333;
-        }'''
-          
-          # Check if CSS is already there
-          if ".deployment-grid" not in html_content:
-              # Find the closing style tag and add CSS before it
-              html_content = html_content.replace('</style>', css_code + '\n    </style>')
-              
-              with open('index.html', 'w') as f:
-                  f.write(html_content)
+              content = f.read()
+          if '.deployment-grid' in content:
+              print("CSS already present in index.html")
           PYTHON_EOF
       
       - name: Commit changes
